# Projeto-Tech-Chalange-2-IA-para-DEVS

./: CONTRIBUTING.md  DOCUMENTACAO_COMPLETA.md  LEIA_PRIMEIRO.md  QUICK_REFERENCE.md  README.md  SUMARIO_DOCUMENTACAO.md  capitais_brasil.csv  config.yaml  config_realista.yaml  pyproject.toml  requeriments.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: GUIA_TECNICO_APROFUNDADO.md  arquitetura.md
outputs/: map.html  report.md  report_instructions.md  run_log.jsonl  solution.json
src/: cli.py
src/core/: crossover.py  distance.py  fitness.py  ga.py  heuristics.py  mutation.py  selection.py  vrp.py
src/data/: capitais.csv  capitais_extendido.csv
src/io/: config.py  load_data.py  output_saver.py
src/llm/: prompts.py  render.py
src/ui/: app.py
src/viz/: charts.py  map.py
tests/: test_distance.py  test_fitness.py  test_operators.py  test_selection.py
